// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DND - PKG: Base Testing child Threshold Calculates threshold Offset 1`] = `
Object {
  "horizontal": 0,
  "vertical": Object {
    "third": 0,
    "twoThirds": 0,
  },
}
`;

exports[`DND - PKG: Base Testing child Threshold Calculates thresholds for dragged as dropped 1`] = `
Object {
  "maxBottom": 0,
  "maxLeft": 0,
  "maxRight": 0,
  "maxTop": 0,
}
`;

exports[`DND - PKG: Base Testing child Threshold Calculates thresholds for parent as dropped 1`] = `
Object {
  "id-p-0": Object {
    "maxBottom": 0,
    "maxLeft": 0,
    "maxRight": 0,
    "maxTop": 0,
  },
}
`;
